# metatrader5_wrapper

./: .gitignore  LICENSE  README.md  mkdocs.yml  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: deploy-docs.yml
docs/: connection_design.md  getting-started.md  index.md
docs/api/: index.md
docs/assets/: custom.css
docs/core/: error-handling.md  index.md  lifecycle.md  results.md
docs/guides/: client-vs-functions.md  results.md
docs/reference/: constants.md  index.md  models.md
docs/tasks/: get-account-info.md  get-candles.md  get-history.md  get-positions.md  get-symbols.md  get-ticks.md  handle-errors.md  index.md  market-book.md  place-orders.md
examples/: candles.py  error_handling.py  quickstart.py
scripts/: lint.sh  typecheck.sh
site/: index.html  objects.inv
site/api/: index.html
site/getting-started/: index.html
site/guides/client-vs-functions/: index.html
site/guides/results/: index.html
site/search/: search_index.json
src/metatrader5_wrapper/: __init__.py  client.py  errors.py
src/metatrader5_wrapper/_core/: connection.py  errors.py  execution.py  raw.py
src/metatrader5_wrapper/connection/: __init__.py  models.py  service.py
src/metatrader5_wrapper/history/: __init__.py  models.py
src/metatrader5_wrapper/market/: __init__.py  symbols.py
src/metatrader5_wrapper/positions/: __init__.py  service.py
src/metatrader5_wrapper/types/: enums.py
src/syntiq_mt5/: __init__.py  client.py  constants.py
src/syntiq_mt5/_core/: execution.py  (+1 more)
tests/: test_new_wrapper.py  test_sequences_and_contract.py
typings/MetaTrader5/: __init__.pyi
(+28 files in other folders)
